--- a/TaqqosOnlineBazarWenAPI/TaqqosOnlineBazarWebAPI.csproj
+++ b/TaqqosOnlineBazarWenAPI/TaqqosOnlineBazarWebAPI.csproj
@@ -8,7 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="OpenAI.ChatGPT.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Taqqos.DataAcces\Taqqos.DataAcces.csproj" />
   </ItemGroup>
 
 </Project>
