--- a/TaqqosOnlineBazarWenAPI/appsettings.json
+++ b/TaqqosOnlineBazarWenAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Host=localhost; Port=5432; Username=postgres; Password=bekzod28072009; Database=Taqqos;"
+  },
+
   "AllowedHosts": "*"
 }
